Add .env prod and dev

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-URL_BASE_PROD = https://177.85.251.66:8080/api
-URL_BASE_DEV = http://10.1.59.59:8080/api
+URL_BASE_PROD=https://177.85.251.66:8080/api
+URL_BASE_DEV_JOB=http://10.1.59.59:8080/api
+URL_BASE_DEV_HOME=http://192.168.18.17:8080/api
+ENVIRONMENT=dev
