--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/datetimepicker": "8.3.0",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/drawer": "^7.3.12",
     "@react-navigation/native": "^7.1.9",
@@ -21,6 +23,7 @@
     "expo-camera": "~16.1.6",
     "expo-dev-client": "~5.1.8",
     "expo-notifications": "~0.31.2",
+    "expo-splash-screen": "^0.30.9",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.2",
@@ -30,8 +33,7 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
-    "sockjs-client": "^1.6.1",
-    "@react-native-community/datetimepicker": "8.3.0"
+    "sockjs-client": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
