--- a/app.json
+++ b/app.json
@@ -16,6 +16,9 @@
       "supportsTablet": true
     },
     "android": {
+      "package": "com.prefeitura.goias",
+        "versionCode": 1
+      },
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
@@ -39,7 +42,20 @@
         {
           "sounds": ["local/path/to/mySoundFile.wav"]
         }
+      ],
+      [
+        "expo-build-properties",
+        {
+          "android": {
+            "compileSdkVersion": 35,
+            "targetSdkVersion": 35,
+            "buildToolsVersion": "35.0.0"
+          },
+          "ios": {
+            "deploymentTarget": "15.1"
+          }
+        }
       ]
     ]
   }
-}
+
