--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@react-navigation/stack": "^7.3.2",
     "@stomp/stompjs": "^7.1.1",
     "axios": "^1.9.0",
-    "expo": "~53.0.9",
+    "expo": "~53.0.0",
     "expo-camera": "~16.1.6",
     "expo-dev-client": "~5.1.8",
     "expo-notifications": "~0.31.2",
@@ -33,7 +33,8 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
-    "sockjs-client": "^1.6.1"
+    "sockjs-client": "^1.6.1",
+    "expo-build-properties": "~0.14.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
